[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://objects/controllers/controllerNetwork/controllerNetwork.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/chunkLoader/chunkLoader.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://networkedPlayers.gd" type="Script" id=5]
[ext_resource path="res://assets/environment/sunset.tres" type="Environment" id=6]
[ext_resource path="res://world/WorldLights.tscn" type="PackedScene" id=7]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="network" parent="." instance=ExtResource( 2 )]

[node name="world" type="Spatial" parent="."]

[node name="player" parent="world" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 60, 0 )

[node name="networkedPlayers" type="Node" parent="world"]
script = ExtResource( 5 )

[node name="chunkLoader" parent="world" instance=ExtResource( 3 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="world"]
environment = ExtResource( 6 )

[node name="WorldLights" parent="world" instance=ExtResource( 7 )]

[connection signal="chunk_data_received" from="network" to="." method="_on_controllerNetwork_chunk_data_received"]
[connection signal="player_disconnected" from="network" to="." method="_on_network_player_disconnected"]
[connection signal="player_info_updated" from="network" to="." method="_on_controllerNetwork_player_info_updated"]
[connection signal="block_broken" from="world/player" to="." method="_on_player_block_broken"]
[connection signal="block_placed" from="world/player" to="." method="_on_player_block_placed"]
[connection signal="entered_chunk" from="world/player" to="." method="_on_player_entered_chunk"]
